# Eqx_CMakeInterfaces

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  CopyASanMSVC.cmake  HeaderUnit.cmake  Interfaces.cmake  README.md  VersionInfo.cmake
.github/workflows/: ci.yaml  ci_clang_18.yml  ci_gcc_14.yml
DebugSymbols/: DebugSymbols.cmake
Interfaces/: DebugSymbols.cmake  Interfaces.cmake  Warnings.cmake
Interfaces/DebugSymbols/: DebugSymbols.cmake
Interfaces/Optimizations/: FastMath.cmake  NoExceptions.cmake  NoRTTI.cmake  Optimizations.cmake  Regular.cmake
Interfaces/Sanitizers/: ASan.cmake  LSan.cmake  Sanitizers.cmake  TSan.cmake  UBSan.cmake
Interfaces/Vars/: Vars.cmake
Interfaces/Warnings/: Additional.cmake  Basic.cmake  Error.cmake  Warnings.cmake
Optimizations/: Optimizations.cmake
Optimizations/FastMath/: FastMath.cmake
Optimizations/NoExceptions/: NoExceptions.cmake
Optimizations/NoRTTI/: NoRTTI.cmake
Optimizations/Regular/: Regular.cmake
ProvingGrounds/: CMakeLists.txt  Main.cpp
Sanitizers/: Sanitizers.cmake
Sanitizers/ASan/: ASan.cmake
Sanitizers/LSan/: LSan.cmake
Sanitizers/TSan/: TSan.cmake
Sanitizers/UBSan/: UBSan.cmake
Tests/: CMakeLists.txt  Simple.cpp
Tests/CopyASanMSVC/: CMakeLists.txt
Tests/DebugSymbols/: CMakeLists.txt  Main.cmake
Tests/HeaderUnit/: CMakeLists.txt  fs.cmake  fs.cpp  fs.hpp  gtest.cmake  gtest.cpp  gtest.hpp
Tests/Optimizations/: Main.cmake  Piecewise.cmake
Tests/Sanitizers/: CMakeLists.txt  Main.cmake  Piecewise.cmake
Tests/Typical/: Main.cmake
Tests/Usage/: CMakeLists.txt  Main.cpp
Tests/Vars/: Main.cmake
Tests/VersionInfo/: CMakeLists.txt  Main.cpp
Tests/Warnings/: Main.cmake  Piecewise.cmake
Warnings/: Warnings.cmake
